# storage/api-docs/api-docs.json
@@ -303,6 +303,170 @@
                     }
                 }
             }
+        },
+        "/edit-delivery/{id}": {
+            "put": {
+                "tags": [
+                    "Delivery"
+                ],
+                "summary": "Cancel a pending delivery",
+                "description": "Cancels a delivery request if it is still in 'pending' status",
+                "operationId": "editDelivery",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Delivery ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Delivery request successfully cancelled",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Delivery item has been successfully cancelled"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "cancel"
+                                                },
+                                                "pickup_address": {
+                                                    "type": "string",
+                                                    "example": "123 Main St"
+                                                },
+                                                "delivery_address": {
+                                                    "type": "string",
+                                                    "example": "456 Elm St"
+                                                },
+                                                "type_of_goods": {
+                                                    "type": "string",
+                                                    "example": "Parcel"
+                                                },
+                                                "deliver_provider": {
+                                                    "type": "string",
+                                                    "example": "DHL"
+                                                },
+                                                "priority": {
+                                                    "type": "string",
+                                                    "example": "Standard"
+                                                },
+                                                "shipment_pickup_date": {
+                                                    "type": "string",
+                                                    "format": "date",
+                                                    "example": "2024-12-05"
+                                                },
+                                                "shipment_pickup_time": {
+                                                    "type": "string",
+                                                    "example": "10:05"
+                                                },
+                                                "description": {
+                                                    "type": "string",
+                                                    "example": "Electronics"
+                                                },
+                                                "length": {
+                                                    "type": "integer",
+                                                    "example": 150
+                                                },
+                                                "height": {
+                                                    "type": "integer",
+                                                    "example": 150
+                                                },
+                                                "width": {
+                                                    "type": "integer",
+                                                    "example": 150
+                                                },
+                                                "weight": {
+                                                    "type": "integer",
+                                                    "example": 150
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2024-12-05T10:00:00Z"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2024-12-05T10:05:00Z"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Delivery request already shipped or completed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Delivery item has been already shipped or completed"
+                                        },
+                                        "data": {
+                                            "type": "object",
+                                            "example": null
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch delivery list",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Failed to fetch delivery list"
+                                        },
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Internal Server Error"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
